[project]
name = "honeybee-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.4",
    "django-celery>=3.1.17",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "google-auth>=2.50.0",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "psycopg>=3.3.4",
    "redis>=7.4.0",
    "sentry-sdk>=2.47.0",
    "vercel-blob>=0.4.2",
    "whitenoise>=6.12.0",
]
